argo-apps/homepage/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
    app.kubernetes.io/component: homepage
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: homepage-server
    app.kubernetes.io/runtime-version: latest
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector: # Required labels to map the pod to the service
    app: homepage 
    deployment: homepage
